--- a/002_student_grade.ipynb
+++ b/002_student_grade.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f7159d99",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b1c532d1",
    "metadata": {},
    "outputs": [
@@ -47,13 +47,34 @@
     "grades = np.array(data)\n",
     "print(grades)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e4e5550a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(22,)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grades.shape"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "anaconda-2025.06-py3.11",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-anaconda-2025.06-py3.11"
   },
   "language_info": {
    "codemirror_mode": {
