--- a/002_student_grade.ipynb
+++ b/002_student_grade.ipynb
@@ -11,6 +11,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "df6f7584",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Dan', 'Joann', 'Pedro', 'Rosie', 'Ethan', 'Vicky', 'Frederic', 'Jimmie', 'Rhonda', 'Giovanni', 'Francesca', 'Rajab', 'Naiyana', 'Kian', 'Jenny', 'Jakeem', 'Helena', 'Ismat', 'Anila', 'Skye', 'Daniel', 'Aisha', 'Bill', 'Ted']\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = ['Dan','Joann','Pedro','Rosie','Ethan','Vicky','Frederic','Jimmie','Rhonda','Giovanni','Francesca','Rajab','Naiyana','Kian','Jenny','Jakeem','Helena','Ismat','Anila','Skye','Daniel','Aisha','Bill','Ted']\n",
+    "print(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "f7159d99",
    "metadata": {},
@@ -19,54 +38,173 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[50, 50, 47, 97, 49, 3, 53, 42, 26, 74, 82, 62, 37, 15, 70, 27, 36, 35, 48, 52, 63, 64]\n"
+      "[50, 50, 47, 97, 49, 3, 53, 42, 26, 74, 82, 62, 37, 15, 70, 27, 36, 35, 48, 52, 63, 64, nan]\n"
      ]
     }
    ],
    "source": [
-    "data = [50, 50, 47, 97, 49, 3, 53, 42, 26, 74, 82, 62, 37, 15, 70, 27, 36, 35, 48, 52, 63, 64]\n",
-    "print (data)"
+    "scores = [50,50,47,97,49,3,53,42,26,74,82,62,37,15,70,27,36,35,48,52,63,64,float('nan')]\n",
+    "print (scores)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b1c532d1",
+   "id": "5a0ec557",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[50 50 47 97 49  3 53 42 26 74 82 62 37 15 70 27 36 35 48 52 63 64]\n"
+      "[10, 11.5, 9, 16, 9.25, 1, 11.5, 9, 8.5, 14.5, 15.5, 13.75, 9, 8, 15.5, 8, 9, 6, 10, 12, 12.5, 12, 8, nan, nan]\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "grades = np.array(data)\n",
-    "print(grades)"
+    "hours = [10,11.5,9,16,9.25,1,11.5,9,8.5,14.5,15.5,13.75,9,8,15.5,8,9,6,10,12,12.5,12,8,float('nan'),float('nan')]\n",
+    "print (hours)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "b1c532d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "np_names = np.array(names)\n",
+    "np_scores = np.array(scores)\n",
+    "np_hours = np.array(hours)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "e4e5550a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(22,)"
+       "(24,)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grades.shape"
+    "np_names.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "22b27f57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(23,)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_scores.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4fe9559c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25,)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_hours.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7d09a6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62bcc344",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({\n",
+    "    \"Names\": np_names,\n",
+    "    \"Scores\": np_scores,\n",
+    "    \"Hours\": np_hours\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bff88975",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.column_stack((np_names, np_scores, np_hours))\n",
+    "df = pd.DataFrame(data, columns=[\"Names\", \"Scores\", \"Hours\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53acb441",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_path=\"/Users/mikeyom/Documents/JuypterNotebook/datascience/z_data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6de23f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(f\"{dataset_path}/student.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e37fa15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df)"
    ]
   }
  ],
@@ -74,7 +212,7 @@
   "kernelspec": {
    "display_name": "anaconda-2025.06-py3.11",
    "language": "python",
-   "name": "conda-env-anaconda-2025.06-py3.11"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
