--- a/002_student_grade.ipynb
+++ b/002_student_grade.ipynb
@@ -31,25 +31,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f7159d99",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[50, 50, 47, 97, 49, 3, 53, 42, 26, 74, 82, 62, 37, 15, 70, 27, 36, 35, 48, 52, 63, 64, nan]\n"
-     ]
-    }
-   ],
-   "source": [
-    "scores = [50,50,47,97,49,3,53,42,26,74,82,62,37,15,70,27,36,35,48,52,63,64,float('nan')]\n",
-    "print (scores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "5a0ec557",
    "metadata": {},
    "outputs": [
@@ -57,13 +38,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10, 11.5, 9, 16, 9.25, 1, 11.5, 9, 8.5, 14.5, 15.5, 13.75, 9, 8, 15.5, 8, 9, 6, 10, 12, 12.5, 12, 8, nan, nan]\n"
+      "[10, 11.5, 9, 16, 9.25, 1, 11.5, 9, 8.5, 14.5, 15.5, 13.75, 9, 8, 15.5, 8, 9, 6, 10, 12, 12.5, 12, 8, nan]\n"
      ]
     }
    ],
    "source": [
-    "hours = [10,11.5,9,16,9.25,1,11.5,9,8.5,14.5,15.5,13.75,9,8,15.5,8,9,6,10,12,12.5,12,8,float('nan'),float('nan')]\n",
+    "hours = [10,11.5,9,16,9.25,1,11.5,9,8.5,14.5,15.5,13.75,9,8,15.5,8,9,6,10,12,12.5,12,8,float('nan')]\n",
     "print (hours)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e69b838f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50, 50, 47, 97, 49, 3, 53, 42, 26, 74, 82, 62, 37, 15, 70, 27, 36, 35, 48, 52, 63, 64, nan, nan]\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = [50,50,47,97,49,3,53,42,26,74,82,62,37,15,70,27,36,35,48,52,63,64,float('nan'),float('nan')]\n",
+    "print (scores)"
    ]
   },
   {
@@ -109,7 +109,7 @@
     {
      "data": {
       "text/plain": [
-       "(23,)"
+       "(24,)"
       ]
      },
      "execution_count": 6,
@@ -123,17 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4fe9559c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(25,)"
+       "(24,)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b7d09a6c",
    "metadata": {},
    "outputs": [],
@@ -154,32 +154,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "62bcc344",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.DataFrame({\n",
     "    \"Names\": np_names,\n",
-    "    \"Scores\": np_scores,\n",
-    "    \"Hours\": np_hours\n",
+    "    \"Hours\": np_hours,\n",
+    "    \"Scores\": np_scores\n",
     "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bff88975",
+   "execution_count": 10,
+   "id": "a896b6c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Names  Hours  Scores\n",
+      "0         Dan  10.00    50.0\n",
+      "1       Joann  11.50    50.0\n",
+      "2       Pedro   9.00    47.0\n",
+      "3       Rosie  16.00    97.0\n",
+      "4       Ethan   9.25    49.0\n",
+      "5       Vicky   1.00     3.0\n",
+      "6    Frederic  11.50    53.0\n",
+      "7      Jimmie   9.00    42.0\n",
+      "8      Rhonda   8.50    26.0\n",
+      "9    Giovanni  14.50    74.0\n",
+      "10  Francesca  15.50    82.0\n",
+      "11      Rajab  13.75    62.0\n",
+      "12    Naiyana   9.00    37.0\n",
+      "13       Kian   8.00    15.0\n",
+      "14      Jenny  15.50    70.0\n",
+      "15     Jakeem   8.00    27.0\n",
+      "16     Helena   9.00    36.0\n",
+      "17      Ismat   6.00    35.0\n",
+      "18      Anila  10.00    48.0\n",
+      "19       Skye  12.00    52.0\n",
+      "20     Daniel  12.50    63.0\n",
+      "21      Aisha  12.00    64.0\n",
+      "22       Bill   8.00     NaN\n",
+      "23        Ted    NaN     NaN\n"
+     ]
+    }
+   ],
    "source": [
-    "data = np.column_stack((np_names, np_scores, np_hours))\n",
-    "df = pd.DataFrame(data, columns=[\"Names\", \"Scores\", \"Hours\"])"
+    "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "53acb441",
    "metadata": {},
    "outputs": [],
@@ -189,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e6de23f9",
    "metadata": {},
    "outputs": [],
@@ -199,10 +230,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6e37fa15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Name  Hours  Score\n",
+      "0         Dan  10.00   50.0\n",
+      "1       Joann  11.50   50.0\n",
+      "2       Pedro   9.00   47.0\n",
+      "3       Rosie  16.00   97.0\n",
+      "4       Ethan   9.25   49.0\n",
+      "5       Vicky   1.00    3.0\n",
+      "6    Frederic  11.50   53.0\n",
+      "7      Jimmie   9.00   42.0\n",
+      "8      Rhonda   8.50   26.0\n",
+      "9    Giovanni  14.50   74.0\n",
+      "10  Francesca  15.50   82.0\n",
+      "11      Rajab  13.75   62.0\n",
+      "12    Naiyana   9.00   37.0\n",
+      "13       Kian   8.00   15.0\n",
+      "14      Jenny  15.50   70.0\n",
+      "15     Jakeem   8.00   27.0\n",
+      "16     Helena   9.00   36.0\n",
+      "17      Ismat   6.00   35.0\n",
+      "18      Anila  10.00   48.0\n",
+      "19       Skye  12.00   52.0\n",
+      "20     Daniel  12.50   63.0\n",
+      "21      Aisha  12.00   64.0\n",
+      "22       Bill   8.00    NaN\n",
+      "23        Ted    NaN    NaN\n"
+     ]
+    }
+   ],
    "source": [
     "print(df)"
    ]
