--- a/002_student_grade.ipynb
+++ b/002_student_grade.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "df6f7584",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "5a0ec557",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "e69b838f",
    "metadata": {},
    "outputs": [
@@ -68,20 +68,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "b1c532d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "np_names = np.array(names)\n",
+    "np_hours = np.array(hours)\n",
     "np_scores = np.array(scores)\n",
-    "np_hours = np.array(hours)\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "id": "e4e5550a",
    "metadata": {},
    "outputs": [
@@ -91,7 +92,7 @@
        "(24,)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "id": "22b27f57",
    "metadata": {},
    "outputs": [
@@ -112,7 +113,7 @@
        "(24,)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "id": "4fe9559c",
    "metadata": {},
    "outputs": [
@@ -133,7 +134,7 @@
        "(24,)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "id": "b7d09a6c",
    "metadata": {},
    "outputs": [],
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "id": "62bcc344",
    "metadata": {},
    "outputs": [],
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "id": "a896b6c9",
    "metadata": {},
    "outputs": [
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "id": "53acb441",
    "metadata": {},
    "outputs": [],
@@ -220,17 +221,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "id": "e6de23f9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(f\"{dataset_path}/student.csv\")"
+    "df_students = pd.read_csv(f\"{dataset_path}/student.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "id": "6e37fa15",
    "metadata": {},
    "outputs": [
@@ -267,8 +268,466 @@
     }
    ],
    "source": [
-    "print(df)"
+    "print(df_students)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "d8866299",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Name",
+         "rawType": "bool",
+         "type": "boolean"
+        },
+        {
+         "name": "Hours",
+         "rawType": "bool",
+         "type": "boolean"
+        },
+        {
+         "name": "Score",
+         "rawType": "bool",
+         "type": "boolean"
+        }
+       ],
+       "ref": "28e91a51-8a16-4c67-94af-06e3008d9016",
+       "rows": [
+        [
+         "0",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "1",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "2",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "3",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "4",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "5",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "6",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "7",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "8",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "9",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "10",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "11",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "12",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "13",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "14",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "15",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "16",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "17",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "18",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "19",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "20",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "21",
+         "False",
+         "False",
+         "False"
+        ],
+        [
+         "22",
+         "False",
+         "False",
+         "True"
+        ],
+        [
+         "23",
+         "False",
+         "True",
+         "True"
+        ]
+       ],
+       "shape": {
+        "columns": 3,
+        "rows": 24
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Hours</th>\n",
+       "      <th>Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Name  Hours  Score\n",
+       "0   False  False  False\n",
+       "1   False  False  False\n",
+       "2   False  False  False\n",
+       "3   False  False  False\n",
+       "4   False  False  False\n",
+       "5   False  False  False\n",
+       "6   False  False  False\n",
+       "7   False  False  False\n",
+       "8   False  False  False\n",
+       "9   False  False  False\n",
+       "10  False  False  False\n",
+       "11  False  False  False\n",
+       "12  False  False  False\n",
+       "13  False  False  False\n",
+       "14  False  False  False\n",
+       "15  False  False  False\n",
+       "16  False  False  False\n",
+       "17  False  False  False\n",
+       "18  False  False  False\n",
+       "19  False  False  False\n",
+       "20  False  False  False\n",
+       "21  False  False  False\n",
+       "22  False  False   True\n",
+       "23  False   True   True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_students.isnull()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "3c40195c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "0",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "29307452-9f65-48a9-bee1-5bf81b6fcaeb",
+       "rows": [
+        [
+         "Name",
+         "0"
+        ],
+        [
+         "Hours",
+         "1"
+        ],
+        [
+         "Score",
+         "2"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 3
+       }
+      },
+      "text/plain": [
+       "Name     0\n",
+       "Hours    1\n",
+       "Score    2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_students.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96482e2b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
