--- a/002_student_grade.ipynb
+++ b/002_student_grade.ipynb
@@ -3317,8 +3317,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "id": "4e362daf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "Passed",
+         "rawType": "bool",
+         "type": "boolean"
+        },
+        {
+         "name": "Names",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "b33001a9-accc-4cb0-a641-e5bbb898e5cf",
+       "rows": [
+        [
+         "False",
+         "15"
+        ],
+        [
+         "True",
+         "7"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 2
+       }
+      },
+      "text/plain": [
+       "Passed\n",
+       "False    15\n",
+       "True      7\n",
+       "Name: Names, dtype: int64"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_students.groupby(df_students.Passed).Names.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c84e40b",
    "metadata": {},
    "outputs": [],
    "source": []
