--- a/004_python.ipynb
+++ b/004_python.ipynb
@@ -85,6 +85,32 @@
     "    else:\n",
     "        print('Weird')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "17bff22b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    n = int(input())\n",
+    "    if ( n >= 1 and n <= 20):\n",
+    "        for num in range(n):\n",
+    "            print (num**2)"
+   ]
   }
  ],
  "metadata": {
