--- a/004_python.ipynb
+++ b/004_python.ipynb
@@ -2,114 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "762875da",
+   "execution_count": 47,
+   "id": "f6f9703d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "1\n",
-      "6\n"
+      "[['Tina', 37.2], ['Harry', 37.21], ['Berry', 37.21], ['Harsh', 39], ['Akriti', 41]]\n"
      ]
-    }
-   ],
-   "source": [
-    "if __name__ == '__main__':\n",
-    "    a = int(input())\n",
-    "    b = int(input())\n",
-    "    if (a >= 1 and a <= 10 ** 10) and (a >= 1 and a <= 10 ** 10):\n",
-    "        print(a+b)\n",
-    "        print(a-b)\n",
-    "        print(a*b)\n",
-    "    else:\n",
-    "        print('Try again')\n",
-    "        exit (0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "f7888d8d",
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "1.3333333333333333\n"
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "if __name__ == '__main__':\n",
-    "    a = int(input())\n",
-    "    b = int(input())\n",
-    "    print(a//b)\n",
-    "    print(a/b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4d7f45c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Weird\n"
-     ]
-    }
-   ],
-   "source": [
-    "import math\n",
-    "import os\n",
-    "import random\n",
-    "import re\n",
+    "#if __name__ == '__main__':\n",
+    "#    students = []\n",
+    "#    for _ in range(int(input())):\n",
+    "#        name = input()\n",
+    "#        score = float(input())\n",
+    "#        students.append([name, score])\n",
+    "\n",
     "import sys\n",
     "\n",
-    "if __name__ == '__main__':\n",
-    "    n = int(input().strip())\n",
-    "    if (n % 2 == 0):\n",
-    "        if ( n >= 2 and n <= 5):\n",
-    "            print('Not Weird')\n",
-    "        if ( n >= 6 and n <= 20):\n",
-    "            print('Weird')\n",
-    "        if ( n > 20 ):\n",
-    "            print('Not Weird')\n",
-    "    else:\n",
-    "        print('Weird')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "17bff22b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "4\n",
-      "9\n",
-      "16\n"
-     ]
-    }
-   ],
-   "source": [
-    "if __name__ == '__main__':\n",
-    "    n = int(input())\n",
-    "    if ( n >= 1 and n <= 20):\n",
-    "        for num in range(n):\n",
-    "            print (num**2)"
+    "n = 5\n",
+    "students = [['Harry', 37.21], ['Berry', 37.21], ['Tina', 37.2], ['Akriti', 41], ['Harsh', 39]]\n",
+    "\n",
+    "# Sort the list of students based on their scores\n",
+    "#students.sort(key=lambda x: (x[1], x[0]))\n",
+    "\n",
+    "students.sort(key=lambda x: x[1])\n",
+    "\n",
+    "print(students)\n",
+    "sys.exit()\n",
+    "\n",
+    "# Find the second lowest grade\n",
+    "second_lowest_score = sorted(set([student[1] for student in students]))[1]\n",
+    "\n",
+    "print(second_lowest_score)\n",
+    "\n",
+    "sys.exit()\n",
+    "\n",
+    "# Print the names of students with the second lowest grade\n",
+    "for student in students:\n",
+    "    if student[1] == second_lowest_score:\n",
+    "        print(student[0])\n",
+    "\n"
    ]
   }
  ],
