--- a/004_python.ipynb
+++ b/004_python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "f6f9703d",
    "metadata": {},
    "outputs": [
@@ -10,16 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Tina', 37.2], ['Harry', 37.21], ['Berry', 37.21], ['Harsh', 39], ['Akriti', 41]]\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\n"
+      "Berry\n",
+      "Harry\n"
      ]
     }
    ],
@@ -39,17 +31,24 @@
     "# Sort the list of students based on their scores\n",
     "#students.sort(key=lambda x: (x[1], x[0]))\n",
     "\n",
-    "students.sort(key=lambda x: x[1])\n",
+    "students.sort(key=lambda x: x[0])\n",
     "\n",
-    "print(students)\n",
-    "sys.exit()\n",
+    "#print(students)\n",
+    "#sys.exit()\n",
     "\n",
     "# Find the second lowest grade\n",
-    "second_lowest_score = sorted(set([student[1] for student in students]))[1]\n",
+    "scores = []\n",
+    "    \n",
+    "for student in students:\n",
+    "    scores.append(student[1])\n",
     "\n",
-    "print(second_lowest_score)\n",
+    "unique_scores = set(scores)\n",
+    "sorted_scores = sorted(unique_scores)\n",
     "\n",
-    "sys.exit()\n",
+    "second_lowest_score = sorted_scores[1]\n",
+    "\n",
+    "#print(second_lowest_score)\n",
+    "#sys.exit()\n",
     "\n",
     "# Print the names of students with the second lowest grade\n",
     "for student in students:\n",
