--- a/005_python_2.ipynb
+++ b/005_python_2.ipynb
@@ -1,9 +1,456 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e6db2fc7",
+   "metadata": {},
+   "source": [
+    "Mike's Website: https://www.mikeyom.com/python/question-2 <br>\n",
+    "Mike's Github: https://github.com/m1key0m/datascience <br>\n",
+    "Hacker Rank: https://www.hackerrank.com/domains/python?filters%5Bskills%5D%5B%5D=Python%20%28Basic%29&badge_type=python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a51dc48",
+   "metadata": {},
+   "source": [
+    "(1). String Split and Join\n",
+    "Input<br> \n",
+    "this is a string \n",
+    "\n",
+    "Output<br>\n",
+    "this-is-a-string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "115ac9b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this-is-a-string\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "def split_and_join(line):\n",
+    "    return line.replace(\" \", \"-\")\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    line = input()\n",
+    "    result = split_and_join(line)\n",
+    "    print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79163f61",
+   "metadata": {},
+   "source": [
+    "(2). What's Your Name?\n",
+    "You are given the firstname and lastname of a person on two different lines. Your task is to read them and print the following:\n",
+    "\n",
+    "python\n",
+    "\n",
+    "Input:<br>\n",
+    "Ross<br>\n",
+    "Taylor \n",
+    "\n",
+    "Output:\n",
+    "Hello Ross Taylor! You just delved into python."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7df6cdf",
+   "id": "755b2c54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Heelo Rodd Tatlor! You just delved into python.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def print_full_name(first, last):\n",
+    "    print(f\"Hello {first} {last}! You just delved into python.\")\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    first_name = input()\n",
+    "    last_name = input()\n",
+    "    print_full_name(first_name, last_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87affc65",
+   "metadata": {},
+   "source": [
+    "(3). Mutations\n",
+    "We have seen that lists are mutable (they can be changed), and tuples are immutable (they cannot be changed). Let's try to understand this with an example. You are given an immutable string, and you want to make changes to it. \n",
+    "\n",
+    "abcdefghijk\n",
+    "\n",
+    "input:<br>\n",
+    "abracadabra<br>\n",
+    "5 k\n",
+    "\n",
+    "output:<br>\n",
+    "abrackdabra "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e3f88bf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abrackdabra\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mutate_string(string, position, character):\n",
+    "    return string[:position] + character + string[position + 1:]\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    s = input()\n",
+    "    i, c = input().split()\n",
+    "    s_new = mutate_string(s, int(i), c)\n",
+    "    print(s_new)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15f00010",
+   "metadata": {},
+   "source": [
+    "(4). Find a string\n",
+    "In this challenge, the user enters a string and a substring. You have to print the number of times that the substring occurs in the given string. String traversal will take place from left to right, not from right to left.\n",
+    "\n",
+    "input:<br>\n",
+    "ABCDCDC<br>\n",
+    "CDC\n",
+    "\n",
+    "output:<br>\n",
+    "2 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9a2a5e70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_substring(string, sub_string):\n",
+    "    count = 0\n",
+    "    str_len = len(string)\n",
+    "    sub_len = len(sub_string)\n",
+    "    \n",
+    "    for i in range(str_len - sub_len + 1):\n",
+    "        if string[i:i + sub_len] == sub_string:\n",
+    "            count += 1\n",
+    "    return count\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    string = input().strip()\n",
+    "    sub_string = input().strip()\n",
+    "    \n",
+    "    count = count_substring(string, sub_string)\n",
+    "    print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f3ab234",
+   "metadata": {},
+   "source": [
+    "(5). String Validators \n",
+    "\n",
+    "You are given a string S.\n",
+    "Your task is to find out if the string S contains: alphanumeric characters, alphabetical characters, digits, lowercase and uppercase characters.\n",
+    "\n",
+    "s = \"qA2\" \n",
+    "\n",
+    "1. In the first line, print True if S has any alphanumeric characters. Otherwise, print False.\n",
+    "2. In the second line, print True if S has any alphabetical characters. Otherwise, print False.\n",
+    "3. In the third line, print True if S has any digits. Otherwise, print False.\n",
+    "4. In the fourth line, print True if S has any lowercase characters. Otherwise, print False.\n",
+    "5. In the fifth line, print True if S has any uppercase characters. Otherwise, print False."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af467b8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    s = input()\n",
+    "    print(any(c.isalnum() for c in s)) \n",
+    "    print(any(c.isalpha() for c in s))\n",
+    "    print(any(c.isdigit() for c in s)) \n",
+    "    print(any(c.islower() for c in s))\n",
+    "    print(any(c.isupper() for c in s))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78920d40",
+   "metadata": {},
+   "source": [
+    "(6). Text Wrap \n",
+    "You are given a string S and width .\n",
+    "Your task is to wrap the string into a paragraph of width w.\n",
+    "\n",
+    "Input<br>\n",
+    "ABCDEFGHIJKLIMNOQRSTUVWXYZ<br>\n",
+    "4\n",
+    "\n",
+    "Output<br> \n",
+    "ABCD<br>\n",
+    "EFGH<br>\n",
+    "IJKL<br>\n",
+    "IMNO<br>\n",
+    "QRST<br>\n",
+    "UVWX<br>\n",
+    "YZ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e7a29f9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABCDE\n",
+      "FGHIJ\n",
+      "KLIMN\n",
+      "OQRST\n",
+      "UVWXY\n",
+      "Z\n"
+     ]
+    }
+   ],
+   "source": [
+    "import textwrap\n",
+    "\n",
+    "def wrap(string, max_width):\n",
+    "    return '\\n'.join(textwrap.wrap(string, max_width))\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    string, max_width = input(), int(input())\n",
+    "    result = wrap(string, max_width)\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18f7b7d6",
+   "metadata": {},
+   "source": [
+    "(7). Time Delta\n",
+    "\n",
+    "When users post an update on social media,such as a URL, image, status update etc., other users in their network are able to view this new post on their news feed. Users can also see exactly when the post was published, i.e, how many hours, minutes or seconds ago.\n",
+    "\n",
+    "Since sometimes posts are published and viewed in different time zones, this can be confusing. You are given two timestamps of one such post that a user can see on his newsfeed in the following format:\n",
+    "\n",
+    "Day dd Mon yyy hh:mm:ss +xxxx \n",
+    "\n",
+    "Here +xxxx represents the time zone. Your task is to print the absolute difference (in seconds) between them.\n",
+    "\n",
+    "Input Format\n",
+    "The first line contains T, the number of testcases.\n",
+    "Each testcase contains 2 lines, representing time t1 and time t2.\n",
+    "\n",
+    "Constraints\n",
+    "Input contains only valid timestamps\n",
+    "year <= 3000\n",
+    "\n",
+    "Output Format\n",
+    "Print the absolute difference (t1 - t2) in seconds.\n",
+    "\n",
+    "Sample Input 0\n",
+    "2\n",
+    "Sun 10 May 2015 13:54:36 -0700\n",
+    "Sun 10 May 2015 13:54:36 -0000\n",
+    "Sat 02 May 2015 19:54:36 +0530\n",
+    "Fri 01 May 2015 13:54:36 -0000\n",
+    "\n",
+    "Sample Output 0\n",
+    "25200\n",
+    "88200\n",
+    "\n",
+    "Explanation 0\n",
+    "In the first query, when we compare the time in UTC for both the time stamps, we see a difference of 7 hours. which is 7 x 3600 seconds or 25200 seconds.\n",
+    "\n",
+    "Similarly, in the second query, time difference is 5 hours and 30 minutes for time zone adjusting for that we have a difference of 1 day and 30 minutes. Or 24 x 3600 + 30 x 60 = 88200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e23df85a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25200\n",
+      "88200\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "fmt = \"%a %d %b %Y %H:%M:%S %z\"\n",
+    "\n",
+    "# Complete the time_delta function below.\n",
+    "def time_delta(t1, t2):\n",
+    "    a=datetime.strptime(t1,fmt)\n",
+    "    b=datetime.strptime(t2,fmt)\n",
+    "\n",
+    "    return str(int(abs((a-b).total_seconds())))\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    fptr = open(os.environ['OUTPUT_PATH'], 'w')\n",
+    "\n",
+    "    t = int(input())\n",
+    "\n",
+    "    for t_itr in range(t):\n",
+    "        t1 = input()\n",
+    "\n",
+    "        t2 = input()\n",
+    "\n",
+    "        delta = time_delta(t1, t2)\n",
+    "\n",
+    "        fptr.write(delta + '\\n')\n",
+    "\n",
+    "    fptr.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68022479",
+   "metadata": {},
+   "source": [
+    "(8). Find Angle MBC \n",
+    "\n",
+    "ABC is a right triangle, 90 deg at B.\n",
+    "Therefore, angle ABC = 90 deg.\n",
+    "\n",
+    "Point M is the midpoint of hypotenuse AC.\n",
+    "You are given the lengths AB and BC.\n",
+    "Your task is to find angle MBC (angle theta, as shown in the figure) in degrees. \n",
+    "\n",
+    "Input:<br>\n",
+    "10<br>\n",
+    "10\n",
+    "\n",
+    "Output:<br>\n",
+    "45 deg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ca9ca85d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45°\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import math\n",
+    "\n",
+    "def angle_MBC(AB, BC):\n",
+    "    theta_rad = math.atan(AB / BC)\n",
+    "    theta_deg = math.degrees(theta_rad)\n",
+    "    return round(theta_deg)\n",
+    "\n",
+    "AB = int(input())\n",
+    "BC = int(input())\n",
+    "MBC = angle_MBC(AB, BC)\n",
+    "print(f'{MBC}\\u00b0')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9383a2d3",
+   "metadata": {},
+   "source": [
+    "(9). Triangle Quest 2\n",
+    "\n",
+    "python\n",
+    "palindromic \n",
+    "You are given a positive integer N.\n",
+    "Your task is to print a palindromic triangle of size N.\n",
+    "For example, a palindromic triangle of size 5 is:\n",
+    "\n",
+    "Input<br>\n",
+    "5\n",
+    "\n",
+    "Output<br>\n",
+    "1<br>\n",
+    "121<br>\n",
+    "12321<br>\n",
+    "1234321<br>\n",
+    "123454321"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "584cbaee",
    "metadata": {},
    "outputs": [
     {
@@ -11,10 +458,10 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n"
+      "121\n",
+      "12321\n",
+      "1234321\n",
+      "123454321\n"
      ]
     }
    ],
@@ -22,18 +469,51 @@
     "n = int(input())\n",
     "\n",
     "for i in range(1, n + 1):\n",
-    "\n",
-    "    print(i)\n",
-    "\n",
-    "    print(\"\")\n",
-    "    \n",
-    "\n",
-    "\n",
     "    # increasing part\n",
-    "#    inc = ''.join(str(x) for x in range(1, i + 1))\n",
+    "    inc = ''.join(str(x) for x in range(1, i + 1))\n",
     "    # decreasing part\n",
-    "#    dec = ''.join(str(x) for x in range(i - 1, 0, -1))\n",
-    "#    print(inc + dec)"
+    "    dec = ''.join(str(x) for x in range(i - 1, 0, -1))\n",
+    "    print(inc + dec)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37df82f0",
+   "metadata": {},
+   "source": [
+    "(10). Calendar Module\n",
+    "\n",
+    "A single line of input containing the space separated month, day and year, respectively, in MM DD YYYY\n",
+    "\n",
+    "Sample Input \n",
+    "08 05 2015 \n",
+    "\n",
+    "Sample Output\n",
+    "WEDNESDAY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "38ad409d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUNDAY\n"
+     ]
+    }
+   ],
+   "source": [
+    "import calendar \n",
+    "import datetime \n",
+    "\n",
+    "month, day, year = map(int, input().split())\n",
+    "date = datetime.date(year, month, day)\n",
+    "\n",
+    "print(date.strftime(\"%A\").upper())"
    ]
   }
  ],
